@@ -3,7 +3,9 @@ package com.sysadminanywhere.directory.service;
 import com.sysadminanywhere.common.directory.model.AD;
 import com.sysadminanywhere.common.directory.model.ADSID;
 import lombok.SneakyThrows;
+import lombok.extern.slf4j.Slf4j;
 import org.apache.directory.api.ldap.model.entry.*;
+import org.apache.directory.api.ldap.model.exception.LdapException;
 import org.apache.directory.api.ldap.model.message.ModifyRequest;
 import org.apache.directory.api.ldap.model.message.ModifyRequestImpl;
 import org.springframework.data.domain.Page;
@@ -12,10 +14,14 @@ import org.springframework.data.domain.Pageable;
 
 import java.lang.reflect.Field;
 import java.time.LocalDateTime;
+import java.time.format.DateTimeFormatter;
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 import java.util.UUID;
+import java.util.stream.Collectors;
 
+@Slf4j
 public class ResolveService<T> {
 
     private Class<T> typeArgumentClass;
@@ -26,83 +32,93 @@ public class ResolveService<T> {
 
     @SneakyThrows
     public Page<T> getADPage(List<Entry> list, Pageable pageable) {
-        List<T> content = new ArrayList<>();
-
-        if (!list.isEmpty()) {
-
-            int start = pageable.getPageNumber() * pageable.getPageSize();
-            int end = start + pageable.getPageSize();
-
-            if (end > list.size())
-                end = list.size();
-
-            for (int i = start; i < end; i++) {
-                content.add(getADValue(list.get(i)));
-            }
-
+        if (list.isEmpty()) {
+            return new PageImpl<>(Collections.emptyList(), pageable, 0);
         }
+
+        int start = (int) pageable.getOffset();
+        int end = Math.min(start + pageable.getPageSize(), list.size());
+
+        if (start >= list.size()) {
+            return new PageImpl<>(Collections.emptyList(), pageable, list.size());
+        }
+
+        List<T> content = list.subList(start, end).stream()
+                .map(this::getADValue)
+                .collect(Collectors.toList());
 
         return new PageImpl<>(content, pageable, list.size());
     }
 
     @SneakyThrows
+    public List<T> getADList(List<Entry> list) {
+        return list.stream()
+                .map(this::getADValue)
+                .collect(Collectors.toList());
+    }
+
+    @SneakyThrows
     public T getADValue(Entry entry) {
 
-        T result = typeArgumentClass.newInstance();
+        T result = typeArgumentClass.getDeclaredConstructor().newInstance();
 
-        Field[] fields = result.getClass().getDeclaredFields();
-
-        for (Field field : fields) {
+        for (Field field : result.getClass().getDeclaredFields()) {
             AD property = field.getAnnotation(AD.class);
-            if (property != null) {
-                field.setAccessible(true);
-                if (property.name().equalsIgnoreCase("distinguishedname")) {
-                    field.set(result, entry.getDn().getName());
-                } else {
-                    if (entry.get(property.name()) != null) {
-                        Value value = entry.get(property.name()).get();
+            if (property == null) continue;
 
-                        if (field.getType().getName().equalsIgnoreCase(String.class.getName())) {
-                            field.set(result, value.getString());
-                        }
+            field.setAccessible(true);
+            String propertyName = property.name();
 
-                        if (field.getType().getName().equalsIgnoreCase(LocalDateTime.class.getName())) {
-                            field.set(result, getLocalDateTime(value.getString()));
-                        }
+            if (propertyName.equalsIgnoreCase("distinguishedname")) {
+                field.set(result, entry.getDn().getName());
+                continue;
+            }
 
-                        if (field.getType().getName().equalsIgnoreCase("java.util.List")) {
-                            List<String> list = new ArrayList<>();
-                            for (Value v : entry.get(property.name())) {
-                                list.add(v.getString());
-                            }
-                            field.set(result, list);
-                        }
-
-                        if (field.getType().getName().equalsIgnoreCase(int.class.getName())) {
-                            field.set(result, Integer.valueOf(value.getString()));
-                        }
-
-                        if (field.getType().getName().equalsIgnoreCase(boolean.class.getName())) {
-                            field.set(result, Boolean.valueOf(value.getString()));
-                        }
-
-                        if (field.getType().getName().equalsIgnoreCase(byte[].class.getName())) {
-                            field.set(result, value.getBytes());
-                        }
-
-                        if (field.getType().getName().equalsIgnoreCase(UUID.class.getName())) {
-                            field.set(result, UUID.nameUUIDFromBytes(value.getBytes()));
-                        }
-
-                        if (field.getType().getName().equalsIgnoreCase(ADSID.class.getName())) {
-                            field.set(result, new ADSID(value.getBytes()));
-                        }
-
-                    }
+            Value value = entry.get(propertyName) != null ? entry.get(propertyName).get() : null;
+            if (value == null) {
+                if (field.getType().equals(String.class)) {
+                    field.set(result, "");
                 }
+                continue;
+            }
+
+            String fieldType = field.getType().getName();
+            switch (fieldType) {
+                case "java.lang.String":
+                    field.set(result, value.getString());
+                    break;
+                case "java.time.LocalDateTime":
+                    field.set(result, getLocalDateTime(value.getString()));
+                    break;
+                case "java.util.List":
+                    List<String> list = new ArrayList<>();
+                    for (Value v : entry.get(property.name())) {
+                        list.add(v.getString());
+                    }
+                    field.set(result, list);
+                    break;
+                case "int":
+                    field.set(result, Integer.parseInt(value.getString()));
+                    break;
+                case "long":
+                    field.set(result, Long.parseLong(value.getString()));
+                    break;
+                case "boolean":
+                    field.set(result, Boolean.parseBoolean(value.getString()));
+                    break;
+                case "[B": // byte[].class.getName()
+                    field.set(result, value.getBytes());
+                    break;
+                case "java.util.UUID":
+                    field.set(result, UUID.nameUUIDFromBytes(value.getBytes()));
+                    break;
+                case "ADSID":
+                    field.set(result, new ADSID(value.getBytes()));
+                    break;
+                default:
+                    break;
             }
         }
-
         return result;
     }
 
@@ -110,46 +126,33 @@ public class ResolveService<T> {
     public Entry getEntry(T item) {
         Entry entry = new DefaultEntry();
 
-        Field[] fields = item.getClass().getDeclaredFields();
-
-        for (Field field : fields) {
+        for (Field field : item.getClass().getDeclaredFields()) {
             AD property = field.getAnnotation(AD.class);
-            if (property != null) {
-                field.setAccessible(true);
-                if (property.name().equalsIgnoreCase("distinguishedname")) {
-                    entry.setDn(field.get(item).toString());
-                } else {
+            if (property == null) continue;
 
-                    if(field.get(item) != null) {
+            field.setAccessible(true);
+            Object value = field.get(item);
+            if (value == null) continue;
 
-                        if (field.getType().getName().equalsIgnoreCase(String.class.getName())) {
-                            entry.add(property.name(), field.get(item).toString());
-                        }
+            String propertyName = property.name();
 
-                        if (field.getType().getName().equalsIgnoreCase(int.class.getName())) {
-                            entry.add(property.name(), field.get(item).toString());
-                        }
+            if (propertyName.equalsIgnoreCase("distinguishedname")) {
+                entry.setDn(value.toString());
+                continue;
+            }
 
-                        if (field.getType().getName().equalsIgnoreCase(boolean.class.getName())) {
-                            entry.add(property.name(), field.get(item).toString());
-                        }
-
-                        if (field.getType().getName().equalsIgnoreCase(byte[].class.getName())) {
-                            entry.add(property.name(), (byte[]) field.get(item));
-                        }
-
-                        if (field.getType().getName().equalsIgnoreCase(UUID.class.getName())) {
-                            entry.add(property.name(), field.get(item).toString());
-                        }
-
-                        if (field.getType().getName().equalsIgnoreCase("java.util.List")) {
-                            for (String s : (List<String>) field.get(item)) {
-                                entry.add(property.name(), s);
-                            }
-                        }
-
+            if (value instanceof String || value instanceof Integer || value instanceof Boolean || value instanceof UUID) {
+                entry.add(propertyName, value.toString());
+            } else if (value instanceof byte[]) {
+                entry.add(propertyName, (byte[]) value);
+            } else if (value instanceof List<?>) {
+                ((List<?>) value).forEach(v -> {
+                    try {
+                        entry.add(propertyName, v.toString());
+                    } catch (LdapException e) {
+                        log.error("Error: {}", e.getMessage());
                     }
-                }
+                });
             }
         }
 
@@ -166,9 +169,15 @@ public class ResolveService<T> {
 
         for (Attribute attribute : newEntry.getAttributes()) {
             if (oldEntry.contains(attribute)) {
-                Modification modification = new DefaultModification(ModificationOperation.REPLACE_ATTRIBUTE, attribute);
-                if (!attribute.get().equals(oldEntry.get(attribute.getId()).get()))
-                    modifyRequest.addModification(modification);
+                if (!attribute.get().equals(oldEntry.get(attribute.getId()).get())) {
+                    if (attribute.get() != null && !attribute.get().equals("")) {
+                        Modification modification = new DefaultModification(ModificationOperation.REPLACE_ATTRIBUTE, attribute);
+                        modifyRequest.addModification(modification);
+                    } else {
+                        Modification modification = new DefaultModification(ModificationOperation.REMOVE_ATTRIBUTE, oldEntry.get(attribute.getId()));
+                        modifyRequest.addModification(modification);
+                    }
+                }
             } else {
                 Modification modification = new DefaultModification(ModificationOperation.ADD_ATTRIBUTE, attribute);
                 modifyRequest.addModification(modification);
@@ -186,28 +195,12 @@ public class ResolveService<T> {
     }
 
     private LocalDateTime getLocalDateTime(String value) {
-        try {
-            if (value.endsWith(".0Z")) {
-                int year = Integer.valueOf(value.substring(0, 4));
-                int month = Integer.valueOf(value.substring(4, 6));
-                int day = Integer.valueOf(value.substring(6, 8));
-
-                int hour = 0;
-                int minute = 0;
-                int second = 0;
-
-                if (value.length() > 8) {
-                    hour = Integer.valueOf(value.substring(8, 10));
-                    minute = Integer.valueOf(value.substring(10, 12));
-                    second = Integer.valueOf(value.substring(12, 14));
-                }
-                return LocalDateTime.of(year, month, day, hour, minute, second);
-            } else {
-                return LocalDateTime.parse(value);
-            }
-        } catch (Exception e) {
+        if (value == null || !value.endsWith(".0Z")) {
             return null;
         }
+
+        DateTimeFormatter formatter = DateTimeFormatter.ofPattern("yyyyMMddHHmmss'.0Z'");
+        return LocalDateTime.parse(value, formatter);
     }
 
 }
